<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        tools:context=".ui.detail.DetailActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <ImageView
                android:id="@+id/posterJumbo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_loading" />

            <ImageView
                android:id="@+id/posterJumboEffect"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </FrameLayout>

        <FrameLayout
            android:background="@drawable/background_detail"
            android:layout_marginTop="200dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="130dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabShare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:tint="@color/blue_light"
                app:tint="@color/blue_light"
                app:borderWidth="0dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_share" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                app:borderWidth="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_favorite_full"
                app:tint="@color/heart" />

            <include
                android:id="@+id/headerDetail"
                layout="@layout/header_detail" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/headerDetail"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/overview"
                    android:textColor="@color/black_grey" />

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/genre_detail"
                    android:textColor="@color/black_grey" />

                <TextView
                    android:id="@+id/tvGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/release"
                    android:textColor="@color/black_grey" />

                <TextView
                    android:id="@+id/tvRelease"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="-" />

            </LinearLayout>


            <ProgressBar
                android:id="@+id/progressbar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/headerDetail" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </FrameLayout>

</ScrollView>

