<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_favorite_full"
        android:title="menuItemFav"
        android:visible="true"
        app:showAsAction="always" />

</menu>