<resources>
    <string name="app_name">Movie Catalogue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tv_show">TV SHOW</string>
    <string name="movie">MOVIE</string>
    <string name="creator">Director: %1$s</string>
    <string name="genre">Genre: %1$s</string>
    <string name="subtitle">Subtitle: %1$s</string>
    <string name="overview">Overview</string>
    <string name="example_overview">Following the events of “Avengers: Endgame”, the Falcon, Sam Wilson and the Winter Soldier, Bucky Barnes team up in a global adventure that tests their abilities, and their patience.</string>
    <string name="genre_detail">Genre</string>
    <string name="example_genre">Sci-Fi &amp; Fantasy, Action &amp; Adventure, Drama, War &amp; Politics</string>
    <string name="release">Release</string>
    <string name="example_release">04/14/2021 (ID)</string>
    <string name="hint_search">Search Film</string>

</resources>